k8s-pod.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-k8s
  labels:
    app: tesk-k8s
spec:
  containers:
    - name: tesk-k8s
      image: "test-k8s:latest"
      imagePullPolicy: IfNotPresent
      ports:
        - name: http
          containerPort: 80
          protocol: TCP
